<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.org.mattford.scoutlink.MainActivity" >

    <ImageView
        android:id="@+id/sl_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"></ImageView>
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sl_logo"
        android:text="@string/welcome_text"></TextView>
    <EditText
        android:id="@+id/nickname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:ems="10"
        android:hint="@string/nickname_hint" >

        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/connect_button"
        android:text="@string/connect_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickname"
        android:onClick="connectClick"
        ></Button>

</RelativeLayout>
